--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -1,3 +1,8 @@
+// Bootswatch 'Darkly' theme
+@import '~bootswatch/dist/darkly/variables';
+@import '~bootstrap/scss/bootstrap';
+@import '~bootswatch/dist/darkly/bootswatch';
+
 body {
 	margin: 4px;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,17 +12,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
-}
-
 hr {
 	margin-top: 5px;
 	margin-bottom: 5px;
-}
-
-.btn {
-	padding-top: 0.1rem;
-	padding-bottom: 0.1rem;
 }
